fixed yt video overlapping for laptops

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ header li{
 
 iframe{
     width:1650px;
-    height:800px;
+    height:700px;
 }
 
 .about, .contact{
